--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -9,6 +9,38 @@
 		<name>CustomApplication</name>
 	</types>
 	<types>
+		<members>Adopter__c.AgeRange__c</members>
+		<members>Adopter__c.Animal__c</members>
+		<members>Adopter__c.NumberOfAdoptions__c</members>
+		<members>Adopter__c.Occupation__c</members>
+		<members>Adopter__c.Warning__c</members>
+		<members>Adoption__c.Adopter__c</members>
+		<members>Adoption__c.AdoptionDate__c</members>
+		<members>Adoption__c.AdoptionRate__c</members>
+		<members>Adoption__c.Animal__c</members>
+		<members>Adoption__c.Detail__c</members>
+		<members>Adoption__c.Stage__c</members>
+		<members>Animal__c.Adopter__c</members>
+		<members>Animal__c.Age__c</members>
+		<members>Animal__c.Cost__c</members>
+		<members>Animal__c.Neutered__c</members>
+		<members>Animal__c.Size__c</members>
+		<members>Animal__c.Stage__c</members>
+		<members>Animal__c.Weight__c</members>
+		<members>Cost__c.Animal__c</members>
+		<members>Cost__c.CostValue__c</members>
+		<members>Cost__c.Description__c</members>
+		<members>Medical_Care__c.Animal__c</members>
+		<members>Medical_Care__c.Condition__c</members>
+		<members>Medical_Care__c.CostDescription__c</members>
+		<members>Medical_Care__c.CostValue__c</members>
+		<members>Medical_Care__c.Doctor__c</members>
+		<members>Medical_Care__c.Neutered__c</members>
+		<members>Medical_Care__c.Symptoms__c</members>
+		<members>Medical_Care__c.TreatmentDuration__c</members>
+		<name>CustomField</name>
+	</types>
+	<types>
 		<members>Adopter__c</members>
 		<members>Adoption__c</members>
 		<members>Animal__c</members>
@@ -25,6 +57,14 @@
 		<members>Adopter_Record_Page</members>
 		<members>Home</members>
 		<name>FlexiPage</name>
+	</types>
+	<types>
+		<members>Adopter__c-Adopter Layout</members>
+		<members>Adoption__c-Adoption Layout</members>
+		<members>Animal__c-Animal Layout</members>
+		<members>Cost__c-Cost Layout</members>
+		<members>Medical_Care__c-Medical Care Layout</members>
+		<name>Layout</name>
 	</types>
 	<types>
 		<members>Admin</members>
